src/objects/CBL_SocioEconomic__c.object
<CustomObject>
    <description>Represents the socio economic information for a Coffee Baseline</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_SocioEconomic</relationshipLabel>
        <relationshipName>CBL_SocioEconomic</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advocadoAreaUnits__c</fullName>
        <label>advocadoAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>advocadoArea__c</fullName>
        <label>advocadoArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bananaPlantainAreaUnits__c</fullName>
        <label>bananaPlantainAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bananaPlantainArea__c</fullName>
        <label>bananaPlantainArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bankAccount__c</fullName>
        <label>bankAccount</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>basicGrainsAreaUnits__c</fullName>
        <label>basicGrainsAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>basicGrainsArea__c</fullName>
        <label>basicGrainsArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>birdsRabbitsGuineaPigs__c</fullName>
        <label>birdsRabbitsGuineaPigs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bullsCowsCalfs__c</fullName>
        <label>bullsCowsCalfs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cardamomAreaUnit__c</fullName>
        <label>cardamomAreaUnit</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cardamomArea__c</fullName>
        <label>cardamomArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>childrenStudying__c</fullName>
        <label>childrenStudying</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, TODOS están asistiendo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No TODOS están asistiendo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>citrusAreaUnits__c</fullName>
        <label>citrusAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>citrusArea__c</fullName>
        <label>citrusArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cocoaAreaUnits__c</fullName>
        <label>cocoaAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cocoaArea__c</fullName>
        <label>cocoaArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>creditDestination__c</fullName>
        <label>creditDestination</label>
        <picklist>
            <picklistValues>
                <fullName>Plantación café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraestructura café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros cultivos agrícolas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Producción pecuaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negocio propio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vivienda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumo</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>creditInterestRate__c</fullName>
        <label>creditInterestRate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>daysOfWageAgriculture__c</fullName>
        <label>daysOfWageAgriculture</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>debtPaymentCapacitySituation__c</fullName>
        <label>debtPaymentCapacitySituation</label>
        <picklist>
            <picklistValues>
                <fullName>Tendrá suficiente capacidad para pagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendrá dificultadoes para pagar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>debtPaymentSituation__c</fullName>
        <label>debtPaymentSituation</label>
        <picklist>
            <picklistValues>
                <fullName>Está al día con sus pagos o cuotas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Está atrasado con en sus pagos o cuotas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>debtsFinancingSource__c</fullName>
        <label>debtsFinancingSource</label>
        <picklist>
            <picklistValues>
                <fullName>Crédito familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediario (comprador)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa de productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microfinanciera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>debts__c</fullName>
        <label>debts</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>electricEnergy__c</fullName>
        <label>electricEnergy</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>forestAreaUnits__c</fullName>
        <label>forestAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>forestArea__c</fullName>
        <label>forestArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>grassPodderAreaUnits__c</fullName>
        <label>grassPodderAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>grassPodderArea__c</fullName>
        <label>grassPodderArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hives__c</fullName>
        <label>hives</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>homeOwnerShip__c</fullName>
        <label>homeOwnerShip</label>
        <picklist>
            <picklistValues>
                <fullName>Propia, totalmente pagada y escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propia, parcialmente pagada y escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propia sin escritura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En arriendo, subarriendo / alquiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En usufructo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ocupante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propiedad comunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Derecho heredado o intestado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otras formas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>horsesMulesDonkeys__c</fullName>
        <label>horsesMulesDonkeys</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>householdIncomeSources__c</fullName>
        <label>householdIncomeSources</label>
        <picklist>
            <picklistValues>
                <fullName>Agricultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo agrícola (jornalero agrícola)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo no agrícola temporal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajo no agrícola permanente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negocio propio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remesas y giros de familiares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidios del gobierno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>knowsHowToReadWrite__c</fullName>
        <label>knowsHowToReadWrite</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>landLine__c</fullName>
        <label>landLine</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lastYearIncomeReduction__c</fullName>
        <label>lastYearIncomeReduction</label>
        <picklist>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plagas y enfermedades agrícolas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eventos naturales (sequías, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambios fuertes en precios y costos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muerte, enfermedad o lesión de familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delitos o robos graves a sus bienes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflictos civiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>numberOfBedrooms__c</fullName>
        <label>numberOfBedrooms</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>otherActivities__c</fullName>
        <label>otherActivities</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>otherAgriculturalActivities__c</fullName>
        <label>otherAgriculturalActivities</label>
        <picklist>
            <picklistValues>
                <fullName>Caballos, mulas, burros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toros, vacas, terneros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerdos, ovejas, cabras, alpacas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aves, conejos, cuyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Piscicultura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cacao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardamomo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banano/plátano</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguacate/palta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frutales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granos básicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caña de azúcar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leña, madera, subproductos del bosque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastos y forrajes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguna de las anteriores</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>pepperAreaUnits__c</fullName>
        <label>pepperAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pepperArea__c</fullName>
        <label>pepperArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percentageOfIncomeAgriculture__c</fullName>
        <label>percentageOfIncomeAgriculture</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>percentageOfIncomeCoffee__c</fullName>
        <label>percentageOfIncomeCoffee</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>personsInHousehold__c</fullName>
        <label>personsInHousehold</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pigsSheepsGoatsAlpacas__c</fullName>
        <label>pigsSheepsGoatsAlpacas</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pondSquareMeters__c</fullName>
        <label>pondSquareMeters</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>populationGroup__c</fullName>
        <label>populationGroup</label>
        <picklist>
            <picklistValues>
                <fullName>Mujer cabeza de hogar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afrodescendiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indígena</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recibe subsidios gubernamentales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adulto mayor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Persona con discapacidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desplazado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desmovilizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>savingsWay__c</fullName>
        <label>savingsWay</label>
        <picklist>
            <picklistValues>
                <fullName>No ahorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprando animales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprando terrenos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En banco, cooperativa o asociación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grupos comunales de autoayuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra forma</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>schoolingYears__c</fullName>
        <label>schoolingYears</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sewageDisposalSystem__c</fullName>
        <label>sewageDisposalSystem</label>
        <picklist>
            <picklistValues>
                <fullName>Red de drenaje / alcantarillado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pozo séptico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letrina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros tipos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>socialSecutiryProgram__c</fullName>
        <label>socialSecutiryProgram</label>
        <picklist>
            <picklistValues>
                <fullName>Salud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensiones/jubilación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riesgos laborales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguro de desempleo/Cesantías</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>sourceOfEnergyCook__c</fullName>
        <label>sourceOfEnergyCook</label>
        <picklist>
            <picklistValues>
                <fullName>Gas en cilindro, pipeta o de red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energía eléctrica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leña, madera, carbón</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Petróleo, gasolina, kerosene o alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros materiales o deshechos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sugarCainAreaUnits__c</fullName>
        <label>sugarCainAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sugarCainArea__c</fullName>
        <label>sugarCainArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>typeOfStove__c</fullName>
        <label>typeOfStove</label>
        <picklist>
            <picklistValues>
                <fullName>Fogon de leña sin chimenea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fogon de leña con chimenea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fogon de leña mejorado/ahorrador</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vegetablesAreaUnits__c</fullName>
        <label>vegetablesAreaUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Cuadras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerdas de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hectáreas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzanas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>vegetablesArea__c</fullName>
        <label>vegetablesArea</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>waterSupply__c</fullName>
        <label>waterSupply</label>
        <picklist>
            <picklistValues>
                <fullName>Agua domiciliar potable (tratada)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agua domiciliar no potable-no tratada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abastecimiento propio de agua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros tipos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>whoDoesntStudy__c</fullName>
        <label>whoDoesntStudy</label>
        <picklist>
            <picklistValues>
                <fullName>Los varones y las mujeres no asisten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo los varones no asisten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solo las mujeres no asisten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quienes deberían cursar bachillerato no</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>whoRecievesIncomeAndDecides__c</fullName>
        <label>whoRecievesIncomeAndDecides</label>
        <picklist>
            <picklistValues>
                <fullName>Hombre recibe ingresos y toma decisiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer recibe ingresos y toma decisiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hombre: ingresos y Mujer: decisiones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mujer: ingresos y hombre: decisiones</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>woodStoveLocation__c</fullName>
        <label>woodStoveLocation</label>
        <picklist>
            <picklistValues>
                <fullName>Cocina independiente a las habitaciones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>En las habitaciones o dormitorios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CBL_SocioEconomic</label>
    <nameField>
        <displayFormat>SE-{0000000}</displayFormat>
        <label>CBL_SocioEconomic Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_SocioEconomic</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>